modified title tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title> git sample </title>
+  <title> git sample website </title>
 <head>static Website Hosting </head>
 <body bgcolor="yellow"></body>
 </html>
