modified index file for qa env

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title> git sample website </title>
-<head>static Website Hosting </head>
+  <title> qa env git sample website </title>
+<head>qa static Website Hosting </head>
 <body bgcolor="yellow"></body>
 </html>
